--- a/Curses/TecnicasAvancadasAngular8/curso-angular-estrutura-inicial/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
+++ b/Curses/TecnicasAvancadasAngular8/curso-angular-estrutura-inicial/src/app/filmes/cadastro-filmes/cadastro-filmes.component.html
@@ -5,39 +5,11 @@
       <mat-card-content>
         <input-text titulo="Titulo *" controlName="titulo" [formGroup]="cadastro"></input-text>
         <input-text titulo="Link Foto" controlName="urlFoto" [formGroup]="cadastro"></input-text>
-        <mat-form-field class="full-width">
-          <input matInput
-            readonly
-            [matDatepicker]="picker" placeholder="Data de Lançamento *" name="dtLancamento"
-            formControlName="dtLancamento"
-            (click)="picker.open()">
-            <mat-error *ngIf="validarCamposService.hasErrorValidar(f.dtLancamento, 'required')">Campo Obrigatório!</mat-error>
-          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-          <mat-datepicker #picker></mat-datepicker>
-        </mat-form-field>
-        <input-textarea
-            titulo="Descrição"
-            controlName="descricao"
-            [formGroup]="cadastro">
-        </input-textarea>
-        <mat-form-field class="full-width">
-          <input matInput placeholder="Nota IMDb *" type="number" min="0" max="10" step="0.1" name="nota"
-            formControlName="nota">
-          <mat-error *ngIf="validarCamposService.hasErrorValidar(f.nota,'required')">Campo Obrigatório!</mat-error>
-          <mat-error *ngIf="validarCamposService.hasErrorValidar(f.nota,'min')">O Campo precisa ter no minimo o valor 0!</mat-error>
-          <mat-error *ngIf="validarCamposService.hasErrorValidar(f.nota,'max')">O Campo pode ter no maximo o valor 10!</mat-error>
-        </mat-form-field>
+        <input-date titulo="Data de Lançamento *" controlName="dtLancamento" [formGroup]="cadastro"></input-date>
+        <input-textarea titulo="Descrição" controlName="descricao" [formGroup]="cadastro"></input-textarea>
+        <input-number titulo="Nota IMDb*" controlName="nota" step="0.1" [formGroup]="cadastro"></input-number>
         <input-text titulo="Link IMDb" controlName="urlIMDB" [formGroup]="cadastro"></input-text>
-        <mat-form-field class="full-width">
-          <mat-select placeholder="Gênero *" formControlName="genero">
-            <mat-option value="Ação">Açao</mat-option>
-            <mat-option value="Aventura">Aventura</mat-option>
-            <mat-option value=">Ficção Científica">Ficção Científica</mat-option>
-            <mat-option value="Romance">Romance</mat-option>
-            <mat-option value="Terror">Terror</mat-option>
-          </mat-select>
-          <mat-error *ngIf="validarCamposService.hasErrorValidar(f.genero, 'required')">Campo Obrigatório!</mat-error>
-        </mat-form-field>
+        <input-select titulo="Gênero" controlName="genero" [formGroup]="cadastro"></input-select>
       </mat-card-content>
       <mat-card-actions>
         <button type="submit" color="accent" mat-raised-button>Salvar</button>
