--- a/Curses/TecnicasAvancadasAngular8/curso-angular-estrutura-inicial/src/app/shared/components/campos/input-date/input-date.component.html
+++ b/Curses/TecnicasAvancadasAngular8/curso-angular-estrutura-inicial/src/app/shared/components/campos/input-date/input-date.component.html
@@ -1,1 +1,14 @@
-<p>input-date works!</p>
+<div [formGroup]="formGroup">
+  <mat-form-field class="full-width">
+    <input matInput
+      readonly
+      [matDatepicker]="picker"
+      [placeholder]="titulo"
+      [name]="controlName"
+      [formControlName]="controlName"
+      (click)="picker.open()">
+      <mat-error *ngIf="validarCamposService.hasErrorValidar(formControl, 'required')">Campo Obrigatório!</mat-error>
+    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+  </mat-form-field>
+</div>
