--- a/Curses/TecnicasAvancadasAngular8/curso-angular-estrutura-inicial/src/app/shared/components/campos/input-number/input-number.component.html
+++ b/Curses/TecnicasAvancadasAngular8/curso-angular-estrutura-inicial/src/app/shared/components/campos/input-number/input-number.component.html
@@ -1,1 +1,15 @@
-<p>input-number works!</p>
+<div [formGroup]="formGroup">
+  <mat-form-field class="full-width">
+    <input matInput
+        [placeholder]="titulo"
+        type="number"
+        [min]="minimo"
+        [max]="maximo"
+        [step]="step"
+        [name]="controlName"
+        [formControlName]="controlName">
+    <mat-error *ngIf="validarCamposService.hasErrorValidar(formControl,'required')">Campo Obrigatório!</mat-error>
+    <mat-error *ngIf="validarCamposService.hasErrorValidar(formControl,'min')">O Campo precisa ter no minimo o valor 0!</mat-error>
+    <mat-error *ngIf="validarCamposService.hasErrorValidar(formControl,'max')">O Campo pode ter no maximo o valor 10!</mat-error>
+  </mat-form-field>
+</div>
