--- a/Curses/TecnicasAvancadasAngular8/curso-angular-estrutura-inicial/src/app/shared/components/alerta/alerta.component.html
+++ b/Curses/TecnicasAvancadasAngular8/curso-angular-estrutura-inicial/src/app/shared/components/alerta/alerta.component.html
@@ -1,9 +1,9 @@
 <h1 mat-dialog-title>{{ titulo }}</h1>
 <div mat-dialog-content>
-  <p>{{ descricao }}</p>
+  <p>{{ alerta.descricao }}</p>
 </div>
 <div mat-dialog-actions>
-  <button mat-button mat-raised-button [color]="corBtn" cdkFocusInitial [mat-dialog-close]="true" >{{btnSucesso}}</button>
-  <button mat-button mat-raised-button color="warn" [mat-dialog-close]="false" *ngIf="possuiBtnFechar">{{ btnCancelar }}</button>
+  <button mat-button mat-raised-button [color]="alerta.corBtnSucesso" cdkFocusInitial [mat-dialog-close]="true" >{{alerta.btnSucesso}}</button>
+  <button mat-button mat-raised-button [color]="alerta.corBtnCancelar" [mat-dialog-close]="false" *ngIf="alerta.possuiBtnFechar">{{ alerta.btnCancelar }}</button>
 </div>
 
