--- a/Curses/TecnicasAvancadasAngular8/curso-angular-estrutura-inicial/src/app/filmes/listagem-filmes/listagem-filmes.component.scss
+++ b/Curses/TecnicasAvancadasAngular8/curso-angular-estrutura-inicial/src/app/filmes/listagem-filmes/listagem-filmes.component.scss
@@ -10,10 +10,18 @@
   }
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 525px) {
   .home-content {
     .home-card {
       width: calc(50% - 52px);
+    }
+  }
+}
+
+@media screen and (min-width: 800px) {
+  .home-content {
+    .home-card {
+      width: calc(33.333% - 52px);
     }
   }
 }
@@ -24,4 +32,10 @@
         width: calc(25% - 52px);
       }
     }
+  }
+
+  .mat-card-image {
+    width: auto;
+    margin: auto;
+    display: block;
   }
